# temp_mail

./: Cargo.toml  README.md  go.mod  tempmail.go
src/: attachment.rs  error.rs  lib.rs  mailmessage.rs  message.rs
