[package]
name = "temp_mail"
version = "0.1.2"
edition = "2021"
description = "1secmail api wrapper for rust"
license = "MIT"
repository = "https://github.com/Teyllayka/temp_mail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
regex = "1.9.5"
chrono = {version = "0.4.31", features = ["serde"]}
futures-util = "0.3.28"
